--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>omar abdi</h1>
+    <!-- <h1>omar abdi</h1> -->
+     <h1>isla shaqeen</h1>
 </body>
 </html>
